added bridge data to status endpoint

--- a/examples/metamask-example/public/index.html
+++ b/examples/metamask-example/public/index.html
@@ -8,6 +8,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      table td {
+        border: 1px solid gray;
+        padding: 5px 4px;
+        min-width: 200px;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
