fixed @rangodev/ui version and use parcel for run project

--- a/examples/basic/metamask-example/public/index.html
+++ b/examples/basic/metamask-example/public/index.html
@@ -34,5 +34,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="module" src="../src/index.js"></script>
   </body>
 </html>
