--- a/examples/basic/metamask-example/public/index.html
+++ b/examples/basic/metamask-example/public/index.html
@@ -6,20 +6,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Rango Exchange Sample Test with SDK"
     />
     <script>
       // Required by some npm packages
-      window.process = { browser: true, env: { ENVIRONMENT: 'BROWSER' } };
-  </script>
-    <style>
-      table td {
-        border: 1px solid gray;
-        padding: 5px 4px;
-        min-width: 200px;
-      }
-    </style>
-    <title>React App</title>
+        window.process = { browser: true, env: { ENVIRONMENT: 'BROWSER' } };
+    </script>
+    <title>Rango Basic SDK, EVM Example</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
