--- a/examples/basic/metamask-example/public/index.html
+++ b/examples/basic/metamask-example/public/index.html
@@ -6,16 +6,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Rango Exchange Sample Test with SDK"
     />
-    <style>
-      table td {
-        border: 1px solid gray;
-        padding: 5px 4px;
-        min-width: 200px;
-      }
-    </style>
-    <title>React App</title>
+    <script>
+      // Required by some npm packages
+        window.process = { browser: true, env: { ENVIRONMENT: 'BROWSER' } };
+    </script>
+    <title>Rango Basic SDK, EVM Example</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -30,5 +27,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="module" src="../src/index.js"></script>
   </body>
 </html>
