--- a/examples/basic/evm-example/public/index.html
+++ b/examples/basic/evm-example/public/index.html
@@ -27,6 +27,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script type="module" src="../src/index.js"></script>
+    <script type="module" src="../src/index.tsx"></script>
   </body>
 </html>
